# arquitectura-hexagonal-nanodb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  demo.sh  test_client.py
.github/workflows/: ci.yml  deploy-demo.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs  metrics.rs  operations.rs  storage.rs
demo-visual/: DEMO_SPECIFICATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
demo-visual/src/: NanoDB_Protocol_Arenat.tsx  NoahDB_Integration.tsx  index.css  main.tsx
docs/: README.en.md  README.es.md
docs/architecture/: hexagonal.md
server-grpc/: Cargo.toml  build.rs
server-grpc/proto/: nanodb.proto
server-grpc/src/: main.rs
server-grpc/src/nanodb/: nanodb.rs  nanodb.tonic.rs
server-http/: Cargo.toml
server-http/src/: main.rs
server-tcp/: Cargo.toml
server-tcp/src/: lib.rs  main.rs  protocol.rs  server.rs
tcp-client/: Cargo.toml
tcp-client/src/: client.rs  main.rs  serializer.rs
