[package]
name = "nanodb-server-http"
version = "0.1.0"
edition = "2021"

[dependencies]
nanodb-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"